data/all_generated_tests/raw_wast_tests/block_StackCorruption_1945.wast
;; 6. Develop a test scenario where a `block` with a chain of push/pop instructions utilizes `br_if` to conditionally branch based on stack state. The objective is to verify if `wizard_engine` correctly adjusts the stack without corruption, especially when the context includes dynamically adjusted labels.

(assert_invalid
  (module (func $conditional-branch-block (result i32)
    (block (result i32)
      (i32.const 10)
      (i32.const 20)
      (i32.add)  ;; 10 + 20 -> 30
      (i32.const 1)
      (br_if 1 (i32.const 0))  ;; Should branch here and return i32 to outer block
    )
  ))
  "type mismatch"
)